[gd_scene load_steps=22 format=3 uid="uid://dgyuns1s3pyl2"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_4vyx5"]
[ext_resource type="Texture2D" uid="uid://be307oxajs3cv" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Idle (32 x 32).png" id="2_52xkc"]
[ext_resource type="Texture2D" uid="uid://demuv3n17kx5m" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Hurt (32 x 32).png" id="2_x8vno"]
[ext_resource type="Shader" path="res://shaders/hit_flash.gdshader" id="2_xeneh"]
[ext_resource type="Texture2D" uid="uid://bws1oegncyxgr" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Jumping (32 x 32).png" id="3_2dwot"]
[ext_resource type="Texture2D" uid="uid://cvwkhwa7c786v" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Running (32 x 32).png" id="4_4bnq6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jvb8r"]
size = Vector2(14, 15)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wm77d"]
shader = ExtResource("2_xeneh")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_3mbh5"]
atlas = ExtResource("2_52xkc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4cvj"]
atlas = ExtResource("2_52xkc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrds5"]
atlas = ExtResource("3_2dwot")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1migy"]
atlas = ExtResource("4_4bnq6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_soj0b"]
atlas = ExtResource("4_4bnq6")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5htty"]
atlas = ExtResource("4_4bnq6")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4nv8t"]
atlas = ExtResource("4_4bnq6")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s3oaq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_x8vno")
}],
"loop": true,
"name": &"Hurt",
"speed": 3.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_3mbh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4cvj")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrds5")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1migy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_soj0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5htty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4nv8t")
}],
"loop": true,
"name": &"Run",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_4y1og"]
resource_name = "Hit_Flash"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_dktqe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anim:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6cgq0"]
_data = {
"Hit_Flash": SubResource("Animation_4y1og"),
"RESET": SubResource("Animation_dktqe")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_em8pl"]
size = Vector2(18, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8khv6"]
size = Vector2(11, 3)

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -7)
collision_mask = 94
script = ExtResource("1_4vyx5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_jvb8r")

[node name="Anim" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_wm77d")
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_s3oaq")
animation = &"Idle"

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6cgq0")
}
speed_scale = 2.5

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Hurtbox_Collision" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_em8pl")
debug_color = Color(0.992157, 0, 0, 0.419608)

[node name="Remote" type="RemoteTransform2D" parent="."]
remote_path = NodePath("..")

[node name="Ray_Right" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(4, 0)
collision_mask = 2

[node name="Ray_Left" type="RayCast2D" parent="."]
position = Vector2(-8, 0)
target_position = Vector2(-4, 0)
collision_mask = 2

[node name="Head_Collider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="Head_Collision" type="CollisionShape2D" parent="Head_Collider"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_8khv6")

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="Head_Collider" to="." method="_on_head_collider_body_entered"]
